# Console-RPG

./: .gitignore  CMakeLists.txt  README.md  main.cpp
BattleSystem/: BattleMapLoader.cpp  BattleMapLoader.h  BattleResult.h  BattleSystem.cpp  BattleSystem.h  BattleTrigerReader.cpp  BattleTrigerReader.h  BattltResult.h
Config/: BattleBalance.h
Data/: MobDataBase.cpp  MobDatabase.h
Game/: Game.cpp  Game.h
Player/: Player.cpp  Player.h
Tile/: Tile.h
Unit/: MobTample.h  Unit.cpp  Unit.h
WorldMap/: WorldMap.cpp  WorldMap.h
WorldMap/battlemap/: battlemap1.txt  battlemap2.txt  battlemap3.txt
WorldMap/battletriger/: DataBattleTriger.txt
WorldMap/map/: map1.txt
